// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`object fields additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <fieldset
      id="root"
    >
      <div
        className="ant-row"
        style={
          Object {
            "marginLeft": -12,
            "marginRight": -12,
          }
        }
      >
        
        <div
          className="ant-col ant-col-24"
          style={
            Object {
              "paddingLeft": 12,
              "paddingRight": 12,
            }
          }
        >
          <div
            className="form-group field field-string"
          >
            <div
              className="ant-row ant-row-top"
              style={
                Object {
                  "marginLeft": -12,
                  "marginRight": -12,
                }
              }
            >
              <div
                className="ant-col form-additional"
                style={
                  Object {
                    "flex": "1",
                    "paddingLeft": 12,
                    "paddingRight": 12,
                  }
                }
              >
                <div
                  className="form-group"
                >
                  <div
                    className="ant-form-item form-group"
                  >
                    <div
                      className="ant-row ant-form-item-row"
                      style={Object {}}
                    >
                      <div
                        className="ant-col ant-col-24 ant-form-item-label"
                        style={Object {}}
                      >
                        <label
                          className=""
                          htmlFor="root_foo-key"
                          title="foo Key"
                        >
                          foo Key
                        </label>
                      </div>
                      <div
                        className="ant-col ant-col-24 ant-form-item-control"
                        style={Object {}}
                      >
                        <div
                          className="ant-form-item-control-input"
                        >
                          <div
                            className="ant-form-item-control-input-content"
                          >
                            <span
                              className="ant-input-affix-wrapper form-control ant-input-affix-wrapper-has-feedback"
                              onClick={[Function]}
                              style={
                                Object {
                                  "width": "100%",
                                }
                              }
                            >
                              <input
                                className="ant-input"
                                hidden={null}
                                id="root_foo-key"
                                name="root_foo-key"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                style={null}
                                type="text"
                                value="foo"
                              />
                              <span
                                className="ant-input-suffix"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="ant-col form-additional"
                style={
                  Object {
                    "flex": "1",
                    "paddingLeft": 12,
                    "paddingRight": 12,
                  }
                }
              >
                <div
                  className="ant-form-item"
                >
                  <div
                    className="ant-row ant-form-item-row"
                    style={Object {}}
                  >
                    <div
                      className="ant-col ant-col-24 ant-form-item-label"
                      style={Object {}}
                    >
                      <label
                        className=""
                        htmlFor="root_foo"
                        title="foo"
                      >
                        foo
                      </label>
                    </div>
                    <div
                      className="ant-col ant-col-24 ant-form-item-control"
                      style={Object {}}
                    >
                      <div
                        className="ant-form-item-control-input"
                      >
                        <div
                          className="ant-form-item-control-input-content"
                        >
                          <span
                            className="ant-input-affix-wrapper ant-input-affix-wrapper-has-feedback"
                            onClick={[Function]}
                            style={
                              Object {
                                "width": "100%",
                              }
                            }
                          >
                            <input
                              className="ant-input"
                              hidden={null}
                              id="root_foo"
                              name="root_foo"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              placeholder=""
                              style={null}
                              type="text"
                              value="foo"
                            />
                            <span
                              className="ant-input-suffix"
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="ant-col"
                style={
                  Object {
                    "flex": "0 0 192px",
                    "paddingLeft": 12,
                    "paddingRight": 12,
                  }
                }
              >
                <button
                  className="ant-btn ant-btn-primary ant-btn-icon-only ant-btn-block ant-btn-dangerous array-item-remove"
                  disabled={false}
                  onClick={[Function]}
                  title="Remove"
                  type="button"
                >
                  <span
                    aria-label="delete"
                    className="anticon anticon-delete"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="delete"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-col ant-col-24"
        style={Object {}}
      >
        <div
          className="ant-row ant-row-end"
          style={
            Object {
              "marginLeft": -12,
              "marginRight": -12,
            }
          }
        >
          <div
            className="ant-col"
            style={
              Object {
                "flex": "0 0 192px",
                "paddingLeft": 12,
                "paddingRight": 12,
              }
            }
          >
            <button
              className="ant-btn ant-btn-primary ant-btn-icon-only ant-btn-block object-property-expand"
              disabled={false}
              onClick={[Function]}
              title="Add Item"
              type="button"
            >
              <span
                aria-label="plus-circle"
                className="anticon anticon-plus-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="plus-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M696 480H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
                  />
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <button
    className="ant-btn ant-btn-submit"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    <span>
      Submit
    </span>
  </button>
</form>
`;

exports[`object fields object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <fieldset
      id="root"
    >
      <div
        className="ant-row"
        style={
          Object {
            "marginLeft": -12,
            "marginRight": -12,
          }
        }
      >
        
        <div
          className="ant-col ant-col-24"
          style={
            Object {
              "paddingLeft": 12,
              "paddingRight": 12,
            }
          }
        >
          <div
            className="form-group field field-string"
          >
            <div
              className="ant-form-item"
            >
              <div
                className="ant-row ant-form-item-row"
                style={Object {}}
              >
                <div
                  className="ant-col ant-col-24 ant-form-item-label"
                  style={Object {}}
                >
                  <label
                    className=""
                    htmlFor="root_a"
                    title="A"
                  >
                    A
                  </label>
                </div>
                <div
                  className="ant-col ant-col-24 ant-form-item-control"
                  style={Object {}}
                >
                  <div
                    className="ant-form-item-control-input"
                  >
                    <div
                      className="ant-form-item-control-input-content"
                    >
                      <span
                        className="ant-input-affix-wrapper ant-input-affix-wrapper-has-feedback"
                        onClick={[Function]}
                        style={
                          Object {
                            "width": "100%",
                          }
                        }
                      >
                        <input
                          className="ant-input"
                          hidden={null}
                          id="root_a"
                          name="root_a"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          placeholder=""
                          style={null}
                          type="text"
                          value=""
                        />
                        <span
                          className="ant-input-suffix"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ant-col ant-col-24"
          style={
            Object {
              "paddingLeft": 12,
              "paddingRight": 12,
            }
          }
        >
          <div
            className="form-group field field-number"
          >
            <div
              className="ant-form-item"
            >
              <div
                className="ant-row ant-form-item-row"
                style={Object {}}
              >
                <div
                  className="ant-col ant-col-24 ant-form-item-label"
                  style={Object {}}
                >
                  <label
                    className=""
                    htmlFor="root_b"
                    title="B"
                  >
                    B
                  </label>
                </div>
                <div
                  className="ant-col ant-col-24 ant-form-item-control"
                  style={Object {}}
                >
                  <div
                    className="ant-form-item-control-input"
                  >
                    <div
                      className="ant-form-item-control-input-content"
                    >
                      <div
                        className="ant-input-number-affix-wrapper ant-input-number-affix-wrapper-has-feedback"
                        onMouseUp={[Function]}
                        style={
                          Object {
                            "width": "100%",
                          }
                        }
                      >
                        <div
                          className="ant-input-number ant-input-number-in-form-item"
                          onBlur={[Function]}
                          onCompositionEnd={[Function]}
                          onCompositionStart={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onKeyUp={[Function]}
                          style={null}
                        >
                          <div
                            className="ant-input-number-handler-wrap"
                          >
                            <span
                              aria-disabled={false}
                              aria-label="Increase Value"
                              className="ant-input-number-handler ant-input-number-handler-up"
                              onMouseDown={[Function]}
                              onMouseLeave={[Function]}
                              onMouseUp={[Function]}
                              role="button"
                              unselectable="on"
                            >
                              <span
                                aria-label="up"
                                className="anticon anticon-up ant-input-number-handler-up-inner"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="up"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                            <span
                              aria-disabled={false}
                              aria-label="Decrease Value"
                              className="ant-input-number-handler ant-input-number-handler-down"
                              onMouseDown={[Function]}
                              onMouseLeave={[Function]}
                              onMouseUp={[Function]}
                              role="button"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                className="anticon anticon-down ant-input-number-handler-down-inner"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                          <div
                            className="ant-input-number-input-wrap"
                          >
                            <input
                              aria-valuenow={null}
                              autoComplete="off"
                              className="ant-input-number-input"
                              disabled={false}
                              id="root_b"
                              name="root_b"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              placeholder=""
                              role="spinbutton"
                              step={1}
                              type="number"
                              value=""
                            />
                          </div>
                        </div>
                        <span
                          className="ant-input-number-suffix"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <button
    className="ant-btn ant-btn-submit"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    <span>
      Submit
    </span>
  </button>
</form>
`;
